FMI_Parking_System/frontend/account/css/account_view_styles.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');

body {
  margin: 0;
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;

  /* color variables used later in the code */
  --backgroundGradient1: #ffa190;
  --backgroundGradient2: #ff9bb3;
  --fontFrom: #fa7d67;
  --fontTo: #ff7595;
  --headerColor: #000000;
  --accountColorFrom: rgba(255, 255, 255, 0.7);
  --accountColorTo: rgba(255, 255, 255, 0.3);
  --glassCircleColorFrom: rgba(255, 255, 255, 0.6);
  --glassCircleColorTo: rgba(255, 255, 255, 0.2);
  --scheduleShadow: rgba(122, 122, 122, 0.212);
  --scheduleBackground: rgba(255, 255, 255, 0.4);
  --optionHoverColor: rgba(255, 255, 255, 0.8);
}

main {
  min-height: 100vh;
  background: linear-gradient(to right bottom, var(--backgroundGradient1), var(--backgroundGradient2));
}

h3 {
  margin: 0;
  color: var(--headerColor);
  text-align: center;
  font-size: medium;
}

p {
  margin: 0;
}

h4 {
  margin: 0;
}

input,
button {
  font-weight: bold;
  font-family: 'Montserrat', sans-serif;
}


/* account tab */
#account-tab {
  width: 100%;
  position: absolute;
  display: block;
  justify-content: space-between;
}

#options-menu {
  /* make the options tab take up 30% of the account tab's space with no growing and shrinking */
  flex: 1 0 30%;
  border-radius: 0;
  background: linear-gradient(to top left, var(--accountColorTo), var(--accountColorFrom));
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  border-bottom-left-radius: 20px;
  border-bottom-right-radius: 20px;
}

.option {
  /* take up all the option menu's width */
  width: 100%;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  margin-right: 1rem;
  border-radius: 1rem;
}

.option:hover {
  background: var(--optionHoverColor);
  /* make the background transition 1 second */
  transition: 1s;
}

/* the logo of the system */
.non-option {
  width: 80%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
}

.non-option img {
  width: 40%;
  padding: 1em;
}


/* my account tab */
#account-tab>section {
  margin: auto;
  border-radius: 50px;
  width: 70%;
  background: linear-gradient(to right bottom, var(--accountColorFrom), var(--accountColorTo));
  display: block;
  padding: 2%;
  text-align: center;
  margin-top: 3%;
}

#my-account-header {
  flex-grow: 0;

  text-transform: uppercase;
  font-size: 1.2rem;
}

#account-details {
  /* width: 80%; */
  /* flex-grow: 1;
    
    flex-direction: column;
    margin: auto; */
  display: flex;
}

#account-details p {
  margin: 0.5rem;
}

.user-info {
  display: inline-block;
  width: 50%;
  /* text-align: left; */
}

.schedule-wrapper {
  display: inline-block;
  width: 49%;
}

#user-picture {
  display: flex;
  justify-content: center;
}

#user-picture img {
  width: 20%;
  flex-grow: 0;
}

#qrcode {
  text-align: -webkit-center;
}

.schedule {
  /* align the schedule tab at the center */
  align-self: center;

  /* width: 80%; */
  height: 38%;

  box-sizing: border-box;
  overflow-y: auto;
  padding: 1rem;
  margin: 1rem 0;

  border-radius: 0.5rem;
  box-shadow: 6px 6px 20px var(--scheduleShadow);
  background: var(--scheduleBackground);

  display: flex;
  flex-direction: column;
  align-items: center;
}

.schedule ul {
  padding: 0;

  list-style-type: none;
  text-align: center;
}

.schedule h4 {
  margin: 0;
}

.no-display {
  display: none !important;
}

/* parking zone map tab */

#parking-zones-section {
  display: flex;
  justify-content: center;
  align-items: center;
}

#parking-zones-section img {
  width: 90%;
  height: 80%;

  cursor: zoom-in;

  box-shadow: 1rem 1rem .5rem var(--scheduleShadow);
  border-radius: 0.5rem;
}


/* 
--!--------------------------------
!! Да се оправи или изтрие
--!--------------------------------
*/

.zoom-in-effect {
  cursor: zoom-out !important;

  /* translate the image to the left and scale it so that it gets bigger when pressed (zooming effect) */
  transform: translateX(-9rem) scale(2, 2);

  /* make transform do its job for 1 second */
  transition: transform 1s;
}

.zoom-out-effect {
  /* when the user clicks on the zoomed image, zoom it out (just scale it back to normal) 
       this definition is used because we want to make the animation a bit slower
       because by default it does it immediately when class zoom-in-effect is removed */
  transform: scale(1, 1);

  /* make transform do its job for 1 second */
  transition: transform 1s;
}

/* upload shchedules tab */

#my-schedule-section {
  display: flex;
  align-items: center;
  font-size: 1.5rem;
  flex: 1 0 70%;
  justify-content: flex-start;
  width: 80%;
  margin: auto;
  margin-top: 5%;
  border-radius: 20px;
}

#upload-file-section,
#schedule-section,
#slots-section {
  flex: 1 0 70%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#upload-file-form {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#upload-file-form label {
  font-weight: bolder;
}

#upload-file-form>*:not(:last-child) {
  margin-bottom: 1rem;
}

#csv {
  max-width: 65%;
  flex: 1 0 20%;
}

input[type=file] {
  font-size: 1.5rem;
}

.button-section-wrapper {
  display: inline-block;
  width: 52%;
}

#button-section {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  flex: 1 0 -5%;
  align-items: center;
}

.button-style {

  border-radius: 1rem;
  border: none;
  margin: 1rem 0.5rem;
  background: linear-gradient(to right top, var(--fontFrom), var(--fontTo));

  padding: 1rem;
  font-size: 1.2rem;

  width: 60%;
  height: 100%;

  filter: brightness(90%);
  cursor: pointer;
}

.schedule-data-section {
  display: inline-block;
  width: 46%;
}

.button-style:hover {
  background: linear-gradient(to left top, var(--fontFrom), var(--fontTo));
  box-shadow: 0 0 1rem var(--accountColorFrom);
  filter: brightness(95%);
}

.active {
  filter: brightness(110%);
}

.active:hover {
  filter: brightness(110%) !important;
}

.inactive {
  cursor: unset;
  filter: brightness(60%) !important;
}

.inactive:hover {
  filter: brightness(60%);
  box-shadow: unset;
  background: linear-gradient(to right top, var(--fontFrom), var(--fontTo));
}

#upload-response {
  display: none;

  position: absolute;
  left: 45%;
  width: 40%;
  z-index: 4;

  padding: 1rem;

  color: white;
  text-align: center;
}

.error {
  display: block !important;

  background-color: rgb(255, 77, 77);
  box-shadow: 0 0 1rem rgba(255, 77, 77, 0.7);
}

.success {
  display: block !important;

  background-color: rgb(71, 209, 71);
  box-shadow: 0 0 1rem rgba(71, 209, 71, 0.7);
}

.show-popup {
  -webkit-animation: fadeIn-Out 4s;
  /* Chrome and Safari */
  -moz-animation: fadeIn-Out 4s;
  /* Mozilla */
  animation: fadeIn-Out 4s;
}

/* 37,5% to 62.5% creates a pause and then the message disappears */
@-moz-keyframes fadeIn-Out {
  0% {
    opacity: 0;
  }

  37.5% {
    opacity: 1;
  }

  62.5% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

@-webkit-keyframes fadeIn-Out {
  0% {
    opacity: 0;
  }

  37.5% {
    opacity: 1;
  }

  62.5% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

@keyframes fadeIn-Out {
  0% {
    opacity: 0;
  }

  37.5% {
    opacity: 1;
  }

  62.5% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

